// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapMarginBlockEnd renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: 0;
  -moz-scroll-snap-margin-block-end: 0;
  -ms-scroll-snap-margin-block-end: 0;
  scroll-snap-margin-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: 0;
  -moz-scroll-snap-margin-block-end: 0;
  -ms-scroll-snap-margin-block-end: 0;
  scroll-snap-margin-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: 0;
  -moz-scroll-snap-margin-block-end: 0;
  -ms-scroll-snap-margin-block-end: 0;
  scroll-snap-margin-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: 0;
  -moz-scroll-snap-margin-block-end: 0;
  -ms-scroll-snap-margin-block-end: 0;
  scroll-snap-margin-block-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: hasnot;
  -moz-scroll-snap-margin-block-end: hasnot;
  -ms-scroll-snap-margin-block-end: hasnot;
  scroll-snap-margin-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: has;
  -moz-scroll-snap-margin-block-end: has;
  -ms-scroll-snap-margin-block-end: has;
  scroll-snap-margin-block-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: hasnot;
  -moz-scroll-snap-margin-block-end: hasnot;
  -ms-scroll-snap-margin-block-end: hasnot;
  scroll-snap-margin-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: has;
  -moz-scroll-snap-margin-block-end: has;
  -ms-scroll-snap-margin-block-end: has;
  scroll-snap-margin-block-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: invalid.path.1;
  -moz-scroll-snap-margin-block-end: invalid.path.1;
  -ms-scroll-snap-margin-block-end: invalid.path.1;
  scroll-snap-margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: invalid.path.1;
  -moz-scroll-snap-margin-block-end: invalid.path.1;
  -ms-scroll-snap-margin-block-end: invalid.path.1;
  scroll-snap-margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: invalid.path.1;
  -moz-scroll-snap-margin-block-end: invalid.path.1;
  -ms-scroll-snap-margin-block-end: invalid.path.1;
  scroll-snap-margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: invalid.path.1;
  -moz-scroll-snap-margin-block-end: invalid.path.1;
  -ms-scroll-snap-margin-block-end: invalid.path.1;
  scroll-snap-margin-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: -54881;
  -moz-scroll-snap-margin-block-end: -54881;
  -ms-scroll-snap-margin-block-end: -54881;
  scroll-snap-margin-block-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: -54881;
  -moz-scroll-snap-margin-block-end: -54881;
  -ms-scroll-snap-margin-block-end: -54881;
  scroll-snap-margin-block-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: -42365;
  -moz-scroll-snap-margin-block-end: -42365;
  -ms-scroll-snap-margin-block-end: -42365;
  scroll-snap-margin-block-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: -42365;
  -moz-scroll-snap-margin-block-end: -42365;
  -ms-scroll-snap-margin-block-end: -42365;
  scroll-snap-margin-block-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: July;
    -moz-scroll-snap-margin-block-end: July;
    -ms-scroll-snap-margin-block-end: July;
    scroll-snap-margin-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: August;
    -moz-scroll-snap-margin-block-end: August;
    -ms-scroll-snap-margin-block-end: August;
    scroll-snap-margin-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: September;
    -moz-scroll-snap-margin-block-end: September;
    -ms-scroll-snap-margin-block-end: September;
    scroll-snap-margin-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: November;
    -moz-scroll-snap-margin-block-end: November;
    -ms-scroll-snap-margin-block-end: November;
    scroll-snap-margin-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: July;
    -moz-scroll-snap-margin-block-end: July;
    -ms-scroll-snap-margin-block-end: July;
    scroll-snap-margin-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: August;
    -moz-scroll-snap-margin-block-end: August;
    -ms-scroll-snap-margin-block-end: August;
    scroll-snap-margin-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: September;
    -moz-scroll-snap-margin-block-end: September;
    -ms-scroll-snap-margin-block-end: September;
    scroll-snap-margin-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: November;
    -moz-scroll-snap-margin-block-end: November;
    -ms-scroll-snap-margin-block-end: November;
    scroll-snap-margin-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: May;
    -moz-scroll-snap-margin-block-end: May;
    -ms-scroll-snap-margin-block-end: May;
    scroll-snap-margin-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: June;
    -moz-scroll-snap-margin-block-end: June;
    -ms-scroll-snap-margin-block-end: June;
    scroll-snap-margin-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: April;
    -moz-scroll-snap-margin-block-end: April;
    -ms-scroll-snap-margin-block-end: April;
    scroll-snap-margin-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: November;
    -moz-scroll-snap-margin-block-end: November;
    -ms-scroll-snap-margin-block-end: November;
    scroll-snap-margin-block-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: May;
    -moz-scroll-snap-margin-block-end: May;
    -ms-scroll-snap-margin-block-end: May;
    scroll-snap-margin-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: June;
    -moz-scroll-snap-margin-block-end: June;
    -ms-scroll-snap-margin-block-end: June;
    scroll-snap-margin-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: April;
    -moz-scroll-snap-margin-block-end: April;
    -ms-scroll-snap-margin-block-end: April;
    scroll-snap-margin-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-block-end: November;
    -moz-scroll-snap-margin-block-end: November;
    -ms-scroll-snap-margin-block-end: November;
    scroll-snap-margin-block-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-block-end: July;
    -moz-scroll-snap-margin-block-end: July;
    -ms-scroll-snap-margin-block-end: July;
    scroll-snap-margin-block-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: August;
    -moz-scroll-snap-margin-block-end: August;
    -ms-scroll-snap-margin-block-end: August;
    scroll-snap-margin-block-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-end: September;
    -moz-scroll-snap-margin-block-end: September;
    -ms-scroll-snap-margin-block-end: September;
    scroll-snap-margin-block-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: November;
    -moz-scroll-snap-margin-block-end: November;
    -ms-scroll-snap-margin-block-end: November;
    scroll-snap-margin-block-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-end: August;
    -moz-scroll-snap-margin-block-end: August;
    -ms-scroll-snap-margin-block-end: August;
    scroll-snap-margin-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-block-end: July;
    -moz-scroll-snap-margin-block-end: July;
    -ms-scroll-snap-margin-block-end: July;
    scroll-snap-margin-block-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: August;
    -moz-scroll-snap-margin-block-end: August;
    -ms-scroll-snap-margin-block-end: August;
    scroll-snap-margin-block-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-end: September;
    -moz-scroll-snap-margin-block-end: September;
    -ms-scroll-snap-margin-block-end: September;
    scroll-snap-margin-block-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: November;
    -moz-scroll-snap-margin-block-end: November;
    -ms-scroll-snap-margin-block-end: November;
    scroll-snap-margin-block-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-end: August;
    -moz-scroll-snap-margin-block-end: August;
    -ms-scroll-snap-margin-block-end: August;
    scroll-snap-margin-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-block-end: January;
    -moz-scroll-snap-margin-block-end: January;
    -ms-scroll-snap-margin-block-end: January;
    scroll-snap-margin-block-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: December;
    -moz-scroll-snap-margin-block-end: December;
    -ms-scroll-snap-margin-block-end: December;
    scroll-snap-margin-block-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-end: April;
    -moz-scroll-snap-margin-block-end: April;
    -ms-scroll-snap-margin-block-end: April;
    scroll-snap-margin-block-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: May;
    -moz-scroll-snap-margin-block-end: May;
    -ms-scroll-snap-margin-block-end: May;
    scroll-snap-margin-block-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-end: June;
    -moz-scroll-snap-margin-block-end: June;
    -ms-scroll-snap-margin-block-end: June;
    scroll-snap-margin-block-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-block-end: January;
    -moz-scroll-snap-margin-block-end: January;
    -ms-scroll-snap-margin-block-end: January;
    scroll-snap-margin-block-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: December;
    -moz-scroll-snap-margin-block-end: December;
    -ms-scroll-snap-margin-block-end: December;
    scroll-snap-margin-block-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-block-end: April;
    -moz-scroll-snap-margin-block-end: April;
    -ms-scroll-snap-margin-block-end: April;
    scroll-snap-margin-block-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-block-end: May;
    -moz-scroll-snap-margin-block-end: May;
    -ms-scroll-snap-margin-block-end: May;
    scroll-snap-margin-block-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-block-end: June;
    -moz-scroll-snap-margin-block-end: June;
    -ms-scroll-snap-margin-block-end: June;
    scroll-snap-margin-block-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: 54881;
  -moz-scroll-snap-margin-block-end: 54881;
  -ms-scroll-snap-margin-block-end: 54881;
  scroll-snap-margin-block-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: 54881;
  -moz-scroll-snap-margin-block-end: 54881;
  -ms-scroll-snap-margin-block-end: 54881;
  scroll-snap-margin-block-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: 42365;
  -moz-scroll-snap-margin-block-end: 42365;
  -ms-scroll-snap-margin-block-end: 42365;
  scroll-snap-margin-block-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: 42365;
  -moz-scroll-snap-margin-block-end: 42365;
  -ms-scroll-snap-margin-block-end: 42365;
  scroll-snap-margin-block-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: July;
  -moz-scroll-snap-margin-block-end: July;
  -ms-scroll-snap-margin-block-end: July;
  scroll-snap-margin-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: July;
  -moz-scroll-snap-margin-block-end: July;
  -ms-scroll-snap-margin-block-end: July;
  scroll-snap-margin-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: June;
  -moz-scroll-snap-margin-block-end: June;
  -ms-scroll-snap-margin-block-end: June;
  scroll-snap-margin-block-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: June;
  -moz-scroll-snap-margin-block-end: June;
  -ms-scroll-snap-margin-block-end: June;
  scroll-snap-margin-block-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginBlockEnd renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-block-end: DarkSlateBlue;
  -moz-scroll-snap-margin-block-end: DarkSlateBlue;
  -ms-scroll-snap-margin-block-end: DarkSlateBlue;
  scroll-snap-margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: DarkSlateBlue;
  -moz-scroll-snap-margin-block-end: DarkSlateBlue;
  -ms-scroll-snap-margin-block-end: DarkSlateBlue;
  scroll-snap-margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: DarkSlateBlue;
  -moz-scroll-snap-margin-block-end: DarkSlateBlue;
  -ms-scroll-snap-margin-block-end: DarkSlateBlue;
  scroll-snap-margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-block-end: DarkSlateBlue;
  -moz-scroll-snap-margin-block-end: DarkSlateBlue;
  -ms-scroll-snap-margin-block-end: DarkSlateBlue;
  scroll-snap-margin-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
